@@ -7,6 +7,10 @@ defmodule Pxblog.User do
     field :password_digest, :string
 
     timestamps()
+		
+		# Virtual Fields
+		field :password, :string, virtual: true
+		field :password_confirmation, :string, virtual: true
   end
 
   @doc """
@@ -14,7 +18,7 @@ defmodule Pxblog.User do
   """
   def changeset(struct, params \\ %{}) do
     struct
-    |> cast(params, [:username, :email, :password_digest])
-    |> validate_required([:username, :email, :password_digest])
+    |> cast(params, [:username, :email, :password, :password_confirmation])
+    |> validate_required([:username, :email, :password, :password_confirmation])
   end
 end
