@@ -18,10 +18,16 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :password_digest, class: "control-label" %>
-    <%= text_input f, :password_digest, class: "form-control" %>
-    <%= error_tag f, :password_digest %>
-  </div>
+		<%= label f, :password, "Password", class: "control-label" %>
+		<%= password_input f, :password, class: "form-control" %>
+		<%= error_tag f, :password %>
+	</div>
+	
+	<div class="form-group">
+		<%= label f, :password_confirmation, "Password Confirmation", class: "control-label" %>
+		<%= password_input f, :password_confirmation, class: "form-control" %>
+		<%= error_tag f, :password_confirmation %>
+	</div>
 
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
